@@ -63,7 +63,7 @@ Pocentek et John Mandereau, traduction fran&ccedil;aise
 <h2>Merci &agrave; ..</h2> 
 
 .. tous les <a
-href="@DOC@latest/Documentation/topdocs/out-www/AUTHORS.html">codeurs de LilyPond</a>,
+href="@DOC@latest/Documentation/topdocs/AUTHORS.html">codeurs de LilyPond</a>,
 chasseurs de bogues et utilisateurs. Remerciements particuliers &agrave;
 
 <ul>
