@@ -14,7 +14,7 @@
 <h2>Newbies</h2>
 <p>
   D&eacute;butez votre apprentissage avec le
-  <a href="@DOC@v2.6/Documentation/user/out-www/lilypond/Tutorial.html">Tutoriel</a>.
+  <a href="@DOC@v2.6/Documentation/user/lilypond/Tutorial.html">Tutoriel</a>.
 </p>
 
 
