@@ -113,4 +113,4 @@ sp&eacute;ciales commencent par un antislash.
 <h2>En savoir plus</h2>
 
 <a href="../install">T&eacute;l&eacute;chargez</a> LilyPond et lancez-vous avec le
-<a href="@DOC@v2.6/Documentation/user/out-www/lilypond/Tutorial">tutoriel</a>.
+<a href="@DOC@v2.6/Documentation/user/lilypond/Tutorial">tutoriel</a>.
