@@ -50,7 +50,7 @@
 </p>
 
 <p align="center">
-  <a href="@DOC@v2.6/input/mutopia/J.S.Bach/out-www/baerenreiter-sarabande.pdf"
+  <a href="@DOC@v2.6/input/mutopia/J.S.Bach/baerenreiter-sarabande.pdf"
      title="Click for a PDF file">
     <img src="@IMAGES@sarabande.png" alt="sarabande">
   </a>
@@ -65,7 +65,7 @@
 </p>
 
 <p align="center">
-  <a href="@DOC@v2.6/input/out-www/les-nereides.pdf"
+  <a href="@DOC@v2.6/input/les-nereides.pdf"
      title="Click for a PDF file">
     <img src="@IMAGES@les-nereides.png" alt="les-nereides"></a>
 </p>
