@@ -14,7 +14,7 @@
 <h2>Beginners</h2>
 <p>
   Begin met het lezen van de
-  <a href="@DOC@v2.4/Documentation/user/out-www/lilypond/Tutorial.html">Korte handleiding</a>
+  <a href="@DOC@v2.6/Documentation/user/lilypond/Tutorial.html">Korte handleiding</a>
 </p>
 
 
