@@ -47,7 +47,7 @@ probleem. Eenvoudige solostukken zijn klaar in een handomdraai
 </p>
 
 <p align="center">
-  <a href="@DOC@v2.4/input/mutopia/J.S.Bach/out-www/baerenreiter-sarabande.pdf"
+  <a href="@DOC@v2.6/input/mutopia/J.S.Bach/baerenreiter-sarabande.pdf"
      title="klik voor een PDF-file">
     <img src="@IMAGES@sarabande.png"
 	 alt="sarabande"></a>
@@ -61,7 +61,7 @@ probleem. Eenvoudige solostukken zijn klaar in een handomdraai
 </p>
 
 <p align="center">
-  <a href="@DOC@v2.4/input/out-www/les-nereides.pdf"
+  <a href="@DOC@v2.6/input/les-nereides.pdf"
      title="klik voor een PDF-file">
     <img src="@IMAGES@les-nereides.png"
 	 alt="les-nereides"> </a>
