@@ -59,7 +59,7 @@ Pocentek and John Mandereau, french translation.
 <h2>Thanks to ..</h2> 
 
 .. all <a
-href="@DOC@latest/Documentation/topdocs/out-www/AUTHORS.html">LilyPond
+href="@DOC@latest/Documentation/topdocs/AUTHORS.html">LilyPond
 hackers</a>, bug-hunters and users. In particular, big thank yous go
 out to
 
