@@ -66,7 +66,7 @@ This is the
     Contact the authors directly?</dt>
     <dd>
     See
-    <a href="@DOC@v2.6/Documentation/topdocs/out-www/AUTHORS.html">the
+    <a href="@DOC@v2.6/Documentation/topdocs/AUTHORS.html">the
       author list</a>.
     (<em>Only contact the authors directly for strictly personal
       communication</em>)
