@@ -54,9 +54,9 @@ Source code is available
 
 More information on in the INSTALL documents with
 <a
-href="@DOC@v2.6/Documentation/topdocs/out-www/INSTALL.html">building and installation instructions
+href="@DOC@v2.6/Documentation/topdocs/INSTALL.html">building and installation instructions
 (version 2.6)</a> and <a
-href="@DOC@v2.7/Documentation/topdocs/out-www/INSTALL.html">
+href="@DOC@v2.7/Documentation/topdocs/INSTALL.html">
 building and installation instructions
 (version 2.7)</a>
 
