@@ -14,7 +14,7 @@
 <h2>Newbies</h2>
 <p>
   Start learning by browsing the
-  <a href="@DOC@v2.6/Documentation/user/out-www/lilypond/Tutorial.html">Tutorial</a>
+  <a href="@DOC@v2.6/Documentation/user/lilypond/Tutorial.html">Tutorial</a>
 </p>
 
 
