@@ -79,7 +79,7 @@ href="@DOC@v2.7/Documentation/topdocs/NEWS.html">Changes</a>,
 <dd>
 This release fixes a few minor problems with the stable
 series. (<a
-href="@DOC@v2.6/Documentation/topdocs/out-www/NEWS.html">Changes</a>,
+href="@DOC@v2.6/Documentation/topdocs/NEWS.html">Changes</a>,
 <a href="install/#2.6">Download</a>) </dd>
 
 <dt><b>LilyPond 2.7.12 is out</b> - <em>October 07, 2005</em></dt>
@@ -241,9 +241,9 @@ print <b>Unicode </b> lyrics in your favorite script and font.  Create
 <b>SVG</b> files, and edit them in Inkscape.
 
  (<a href="announce-v2.6.html">Announcement</a>, <a
-href="@DOC@v2.6/Documentation/out-www/THANKS.html">Thank
+href="@DOC@v2.6/Documentation/THANKS.html">Thank
 Yous</a>, <a href="install/#2.6">Download</a>, <a
-href="@DOC@v2.6/Documentation/topdocs/out-www/NEWS.html">Changes</a>)
+href="@DOC@v2.6/Documentation/topdocs/NEWS.html">Changes</a>)
 
 </dd>
 
@@ -258,7 +258,7 @@ restructuring &ldquo;under the hood&rdquo;, this version will be 10 to
 
 <dd> This version fixes a few minor bugs found in
 2.6.0, and also works on DOS-based Windows versions.  (<a
-href="@DOC@v2.6/Documentation/topdocs/out-www/NEWS.html">Changes</a>,
+href="@DOC@v2.6/Documentation/topdocs/NEWS.html">Changes</a>,
 <a href="install/#2.6">Download</a>)
 
 </dd>
