@@ -106,4 +106,4 @@ entered with backslashes.
 <h2>Learning more</h2>
 
 <a href="../install">Download</a> LilyPond and try the
-<a href="@DOC@v2.6/Documentation/user/out-www/lilypond/Tutorial">tutorial</a>.
+<a href="@DOC@v2.6/Documentation/user/lilypond/Tutorial">tutorial</a>.
