@@ -1,3 +1,9 @@
+2005-12-02  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* nl/*.html:
+	* fr/*.html:
+	* site/*.html: Remove out-www from 2.6, 2.7 (latest) doc links.
+
 2005-11-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* site/documentation.html: idem.
